--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -170,6 +170,8 @@
               href: automation-linux-hrw-install.md
             - name: Ausführen von Runbooks für Hybrid Runbook Worker
               href: automation-hrw-run-runbooks.md
+            - name: Verwenden von Azure Policy zum Erzwingen der Auftragsausführung
+              href: enforce-job-execution-hybrid-worker.md
             - name: Beheben von Hybrid Runbook Worker-Problemen
               href: troubleshoot/hybrid-runbook-worker.md
         - name: Verwenden der Integration der Quellcodeverwaltung
@@ -272,8 +274,12 @@
           href: update-management/overview.md
         - name: "Unterstützte Regionen für einen verknüpften Log\_Analytics-Arbeitsbereich"
           href: how-to/region-mappings.md
+        - name: Planen der Bereitstellung
+          href: update-management/plan-deployment.md
         - name: Aktivieren
           items:
+            - name: Systemanforderungen
+              href: update-management/operating-system-requirements.md
             - name: Aktivieren mithilfe der Azure Resource Manager-Vorlag
               href: update-management/enable-from-template.md
             - name: Aktivieren im Azure-Portal
