--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -31,7 +31,7 @@
           displayName: 'codec,codecs,compression,compressed,mp3,flac,mulaw,alaw,mp4,mp4a,wav,opus,ogg,pcm,silk'
         - name: Auswählen eines bestimmten Mikrofoneingabegeräts
           href: how-to-select-audio-input-devices.md
-        - name: Verwenden der automatischen Erkennung der Ausgangssprache
+        - name: Verwenden der Sprachenerkennung
           href: how-to-automatic-language-detection.md
         - name: Verwenden der Batch-Transkriptions-API
           href: batch-transcription.md
@@ -57,6 +57,16 @@
               href: how-to-custom-speech-human-labeled-transcriptions.md
             - name: Lebenszyklus von Modell und Endpunkt
               href: how-to-custom-speech-model-and-endpoint-lifecycle.md
+    - name: Verantwortungsvolle Verwendung von KI
+      items:
+        - name: Aussprachebewertung
+          items:
+            - name: Transparenzhinweis
+              items:
+                - name: Anwendungsfälle für die Aussprachebewertung
+                  href: /legal/cognitive-services/speech-service/pronunciation-assessment/transparency-note-pronunciation-assessment?context=/azure/cognitive-services/speech-service/context/context
+                - name: Merkmale und Einschränkungen
+                  href: /legal/cognitive-services/speech-service/pronunciation-assessment/characteristics-and-limitations-pronunciation-assessment?context=/azure/cognitive-services/speech-service/context/context
     - name: Tutorials
       items:
         - name: Verbessern der Genauigkeit mithilfe von Mandantenmodellen
@@ -110,6 +120,8 @@
       items:
         - name: Verbessern der Synthese mit SSML
           href: speech-synthesis-markup.md
+        - name: Geringere Wartezeit bei der Sprachsynthese mit dem Speech SDK
+          href: how-to-lower-speech-synthesis-latency.md
         - name: Synthetisieren von Sprache mit der API für lange Audioinhalte
           href: long-audio-api.md
         - name: Abrufen von Gesichtsausdrucksereignissen für die Lippensynchronisierung
@@ -192,9 +204,6 @@
           href: regions.md#speech-to-text-text-to-speech-and-translation
         - name: Phonetische SSML-Sätze
           href: speech-ssml-phonetic-sets.md
-        - name: Häufig gestellte Fragen zur Sprachsynthese
-          displayName: 'FAQ,TTS FAQ,SS FAQ,frequently asked questions'
-          href: faq-text-to-speech.md
 - name: Sprachübersetzung
   items:
     - name: Dokumentation zur Sprachübersetzung
