--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -130,6 +130,8 @@
           href: container-instances-get-logs.md
         - name: Protokollierung mit Azure Monitor-Protokollen
           href: container-instances-log-analytics.md
+        - name: Überprüfen von Images mithilfe der Aktion zur Azure-Containerüberprüfung
+          href: container-instances-github-action-scan.md
     - name: Problembehandlung
       items:
         - name: Häufig auftretende Probleme und Problembehandlung
@@ -156,7 +158,7 @@
       href: container-instances-reference-yaml.md
     - name: Connector
       href: /connectors/aci
-    - name: Integrierte Azure Policy-Aktionen
+    - name: Azure Policy-Integrationen
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
 - name: Ressourcen
@@ -177,3 +179,5 @@
       href: 'https://azure.microsoft.com/resources/videos/index/?services=container-instances&sort=newest'
     - name: Häufig gestellte Fragen
       href: container-instances-faq.md
+- name: Support und Problembehandlung
+  href: container-instances-support-help.md
