--- a/articles/index.yml
+++ b/articles/index.yml
@@ -10,7 +10,7 @@ metadata:
   ms.topic: hub-page
   author: rolyon
   ms.author: rolyon
-  ms.date: 03/03/2021
+  ms.date: 05/24/2021
   featureFlags:
     - clicktale
 highlightedContent:
@@ -285,13 +285,13 @@ productDirectory:
       azureCategories:
         - ai-machine-learning
       url: cognitive-services/translator/index.yml
-    - title: Video Indexer
+    - title: Azure Video Analyzer for Media
       summary: Nutzen von wertvollen Videoinformationen
-      imageSrc: 'https://static.docs.com/ui/media/product/azure/media-services.svg'
+      imageSrc: ./media/index/video-analyzer.svg
       azureCategories:
         - ai-machine-learning
         - media
-      url: media-services/video-indexer/index.yml
+      url: azure-video-analyzer/video-analyzer-for-media-docs/index.yml
     - title: Azure Analysis Services
       summary: Für große Unternehmen geeignete Analyse-Engine als Dienst
       imageSrc: 'https://static.docs.com/ui/media/product/azure/analysis-services.svg'
@@ -459,6 +459,7 @@ productDirectory:
         - compute
         - containers
         - iot
+        - web
       url: azure-functions/index.yml
     - title: Azure Kubernetes Service (AKS)
       summary: 'Vereinfachen der Bereitstellung, der Verwaltung und des Betriebs von Kubernetes'
@@ -528,7 +529,7 @@ productDirectory:
         - compute
         - databases
       url: ./azure-sql/virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-    - title: Static Web Apps (Vorschau)
+    - title: Statische Web-Apps
       summary: 'Ein moderner Web-App-Dienst, der eine optimierte umfassende Entwicklung von Quellcode bis hin zu globaler Hochverfügbarkeit ermöglicht'
       imageSrc: ./media/index/static-apps.svg
       azureCategories:
@@ -549,7 +550,7 @@ productDirectory:
         - containers
         - web
       url: app-service/index.yml
-    - title: Windows Virtual Desktop
+    - title: Azure Virtual Desktop
       summary: Beste Umgebung für virtuelle Desktops unter Azure
       imageSrc: 'https://static.docs.com/ui/media/product/azure/windows-virtual-desktop.svg'
       azureCategories:
@@ -1072,12 +1073,12 @@ productDirectory:
       azureCategories:
         - media
       url: media-services/latest/stream-live-tutorial-with-api.md
-    - title: Live Video Analytics (Vorschau)
+    - title: Azure Video Analyzer (Vorschau)
       summary: Erstellen Sie intelligente videobasierte Anwendungen mithilfe der KI Ihrer Wahl.
-      imageSrc: 'https://static.docs.com/ui/media/product/azure/media-services.svg'
+      imageSrc: ./media/index/video-analyzer.svg
       azureCategories:
         - media
-      url: media-services/live-video-analytics-edge/overview.md
+      url: azure-video-analyzer/video-analyzer-docs/overview.md
     - title: Media Services
       summary: 'Audio- und Videoinhalte nach Maß verschlüsseln, speichern und streamen'
       imageSrc: 'https://static.docs.com/ui/media/product/azure/media-services.svg'
@@ -1350,15 +1351,15 @@ tools:
     - title: ARM-Vorlagen
       imageSrc: 'https://static.docs.com/ui/media/product/azure/resource-groups.svg'
       url: azure-resource-manager/templates/index.yml
+    - title: Bicep
+      imageSrc: ./media/index/bicep.svg
+      url: azure-resource-manager/bicep/index.yml
     - title: Jenkins
       imageSrc: 'https://docs.microsoft.com/media/logos/logo_jenkins.svg'
       url: /azure/developer/jenkins
     - title: Terraform
       imageSrc: 'https://docs.microsoft.com/media/logos/logo_terraform.svg'
       url: /azure/developer/terraform/
-    - title: Ansible
-      imageSrc: ./media/index/ansible.svg
-      url: /azure/developer/ansible
 additionalContent:
   sections:
     - title: Sovereign Clouds
