--- a/articles/media-services/latest/TOC.yml
+++ b/articles/media-services/latest/TOC.yml
@@ -85,6 +85,8 @@
           href: security-encrypt-data-managed-identity-cli-tutorial.md
         - name: Zugreifen auf Speicher mit einer verwalteten Identität
           href: security-access-storage-managed-identity-cli-tutorial.md
+        - name: "Gewähren des Zugriffs auf ein Media\_Services-Konto für eine Funktions-App"
+          href: security-function-app-managed-identity-cli-tutorial.md
     - name: Node.js
       items:
         - name: Codieren und Streamen einer Remotedatei (Node.js)
@@ -259,6 +261,9 @@
               href: job-error-codes-reference.md
     - name: Hochverfügbarkeit
       items:
+        - name: Verfügbarkeitszonen
+          displayName: 'Availability, Availability Zones, AZ, az, HA, high availability'
+          href: concept-availability-zones.md
         - name: Video on Demand
           displayName: 'failover, bcdr, HA, high availability'
           href: architecture-high-availability-encoding-concept.md
@@ -463,6 +468,8 @@
           href: security-encrypt-data-managed-identity-cli-tutorial.md
         - name: Zugreifen auf Speicher mit einer verwalteten Identität
           href: security-access-storage-managed-identity-cli-tutorial.md
+        - name: "Gewähren des Zugriffs auf ein Media\_Services-Konto für eine Funktions-App"
+          href: security-function-app-managed-identity-cli-tutorial.md
     - name: Verwenden von Media Playern
       items:
         - name: Vollständiges Setup von Azure Media Player
