--- a/articles/partner-solutions/toc.yml
+++ b/articles/partner-solutions/toc.yml
@@ -16,14 +16,44 @@
     - name: Datadog
       items:
         - name: Übersicht
-          displayName: 'Datadog, Monitoring'
-          href: ./datadog/overview.md
-        - name: Erstellen
-          href: ./datadog/create.md
-        - name: Verwalten
-          href: ./datadog/manage.md
-        - name: Problembehandlung
-          href: ./datadog/troubleshoot.md
+          items:
+            - name: Was ist Datadog?
+              href: ./datadog/overview.md
+              displayName: 'Datadog, Monitoring'
+        - name: Schnellstarts
+          items:
+            - name: Erstellen einer neuen Datadog-Organisation
+              href: ./datadog/create.md
+            - name: Verknüpfen mit einer vorhandenen Datadog-Organisation
+              href: ./datadog/link-to-existing-organization.md
+        - name: Anleitung
+          items:
+            - name: Konfigurieren der Vorabbereitstellung
+              href: ./datadog/prerequisites.md
+            - name: Verwalten
+              href: ./datadog/manage.md
+            - name: Problembehandlung
+              items:
+                - name: Support
+                  href: ./datadog/get-support.md
+                - name: Beheben allgemeiner Fehler
+                  href: ./datadog/troubleshoot.md
+    - name: Elastic
+      items:
+        - name: Übersicht
+          items:
+            - name: Was ist Elastic?
+              href: ./elastic/overview.md
+        - name: Schnellstarts
+          items:
+            - name: Erstellen einer Elastic-Ressource
+              href: ./elastic/create.md
+        - name: Anleitung
+          items:
+            - name: Verwalten der Integration
+              href: ./elastic/manage.md
+            - name: Problembehandlung
+              href: ./elastic/troubleshoot.md
 - name: Verweis
   items:
     - name: Azure CLI
