--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -32,6 +32,8 @@
     - name: Versioning policy (Versionsverwaltungsrichtlinie)
       href: concepts-version-policy.md
       displayName: 'version, postgresql'
+    - name: Upgrades von Hauptversionen
+      href: how-to-upgrade-using-dump-and-restore.md
     - name: Bekannte Probleme und Einschränkungen
       href: concepts-known-issues-limitations.md
       displayName: 'issues, limitations, postgresql'
@@ -148,8 +150,8 @@
             - name: Verbindungsarchitektur
               href: concepts-connectivity-architecture.md
               displayName: 'security, architecture'
-            - name: Erweiterter Schutz vor Bedrohungen
-              href: concepts-data-access-and-security-threat-protection.md
+            - name: Bedrohungsschutz mit Azure Defender
+              href: ../security-center/defender-for-databases-introduction.md
               displayName: 'security, advanced threat protection'
             - name: Azure AD-Authentifizierung
               href: concepts-aad-authentication.md
@@ -351,11 +353,6 @@
             - name: Problembehandlung für Datenverschlüsselung
               href: howto-data-encryption-troubleshoot.md
               displayName: 'debug, security, encryption'
-        - name: Erweiterter Schutz vor Bedrohungen
-          items:
-            - name: Azure-Portal
-              href: howto-database-threat-protection-portal.md
-              displayName: 'advanced thread, security'
         - name: Virtuelles Netzwerk
           items:
             - name: Azure-Portal
@@ -408,8 +405,6 @@
           items:
             - name: Azure-Portal
               href: howto-move-regions-portal.md
-        - name: Upgrades von Hauptversionen
-          href: how-to-upgrade-using-dump-and-restore.md
 - name: Flexible Server (Vorschau)
   expanded: true
   items:
@@ -472,6 +467,8 @@
           href: flexible-server/concepts-maintenance.md
         - name: Verbindungspooling (PgBouncer)
           href: flexible-server/concepts-pgbouncer.md
+        - name: Serverparameter
+          href: flexible-server/concepts-server-parameters.md
         - name: Geschäftskontinuität
           items:
             - name: Übersicht über die Geschäftskontinuität
@@ -551,21 +548,29 @@
           items:
             - name: Azure-Portal
               href: flexible-server/how-to-restart-server-portal.md
+            - name: Azure CLI
+              href: flexible-server/how-to-restart-server-cli.md
         - name: Wiederherstellen eines Servers
           items:
             - name: Azure-Portal
               href: flexible-server/how-to-restore-server-portal.md
+            - name: Azure CLI
+              href: flexible-server/how-to-restore-server-cli.md
         - name: Beenden/Starten eines Servers
           items:
             - name: Azure-Portal
               href: flexible-server/how-to-stop-start-server-portal.md
+            - name: Azure CLI
+              href: flexible-server/how-to-stop-start-server-cli.md
         - name: Verwalten der Hochverfügbarkeit
           items:
             - name: Azure-Portal
               href: flexible-server/how-to-manage-high-availability-portal.md
+            - name: Azure CLI
+              href: flexible-server/how-to-configure-high-availability-cli.md
         - name: Überwachen
           items:
-            - name: Erstellen von Warnungen zu Metriken
+            - name: Erstellen von Warnungen zu Metriken über das Portal
               href: flexible-server/howto-alert-on-metrics.md
             - name: Konfigurieren von und Zugreifen auf Protokolle
               href: flexible-server/howto-configure-and-access-logs.md
@@ -709,6 +714,9 @@
             - name: Beheben von Verbindungsproblemen
               href: howto-hyperscale-troubleshoot-common-connection-issues.md
               displayName: 'connection errors, hyperscale'
+            - name: Problembehandlung beim schreibgeschützten Zugriff
+              href: howto-hyperscale-troubleshoot-read-only.md
+              displayName: 'read-only, hyperscale'
             - name: Hilfreiche Diagnoseabfragen
               href: howto-hyperscale-useful-diagnostic-queries.md
     - name: API-Referenz
