--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -5,7 +5,7 @@
   items:
     - name: Was ist Cognitive Search?
       href: search-what-is-azure-search.md
-    - name: Funktionsliste
+    - name: Funktionen in Search
       href: search-features-list.md
     - name: Neu in Search
       href: whats-new.md
@@ -42,28 +42,38 @@
       href: search-get-started-arm.md
 - name: Tutorials
   items:
-    - name: Hinzufügen von Suchfunktionen zu einer Website
+    - name: Hinzufügen von Suchfunktionen zu Web-Apps
       items:
         - name: C#
           items:
-            - name: Websiteübersicht
+            - name: Übersicht
               href: tutorial-csharp-overview.md
             - name: Erstellen eines Suchindexes
               href: tutorial-csharp-create-load-index.md
             - name: Bereitstellen einer statischen Web-App
               href: tutorial-csharp-deploy-static-web-app.md
-            - name: Spickzettel für die Integration
+            - name: Untersuchen des Codes
               href: tutorial-csharp-search-query-integration.md
         - name: JavaScript
           items:
-            - name: Websiteübersicht
+            - name: Übersicht
               href: tutorial-javascript-overview.md
             - name: Erstellen eines Suchindexes
               href: tutorial-javascript-create-load-index.md
             - name: Bereitstellen einer statischen Web-App
               href: tutorial-javascript-deploy-static-web-app.md
-            - name: Spickzettel für die Integration
+            - name: Untersuchen des Codes
               href: tutorial-javascript-search-query-integration.md
+        - name: Python
+          items:
+            - name: Übersicht
+              href: tutorial-python-overview.md
+            - name: Erstellen eines Suchindexes
+              href: tutorial-python-create-load-index.md
+            - name: Bereitstellen einer statischen Web-App
+              href: tutorial-python-deploy-static-web-app.md
+            - name: Untersuchen des Codes
+              href: tutorial-python-search-query-integration.md
     - name: Erstellen einer C#-App
       items:
         - name: 1. Seite für die Standardsuche
@@ -264,6 +274,8 @@
               href: search-howto-managed-identities-cosmos-db.md
             - name: SQL-Datenbank
               href: search-howto-managed-identities-sql.md
+        - name: "Power\_Query-Datenquellen"
+          href: search-how-to-index-power-query-data-sources.md
         - name: SharePoint Online
           href: search-howto-index-sharepoint-online.md
         - name: Azure-Blobs
@@ -302,6 +314,8 @@
           href: search-howto-connecting-azure-sql-mi-to-azure-search-using-indexers.md
         - name: Azure SQL Server-VMs
           href: search-howto-connecting-azure-sql-iaas-to-azure-search-using-indexers.md
+        - name: Azure MySQL
+          href: search-howto-index-mysql.md
         - name: Behandeln von Indexerproblemen
           href: search-indexer-troubleshooting.md
         - name: Behandeln von Indexerfehlern und -warnungen
@@ -430,7 +444,7 @@
           href: search-traffic-analytics.md
     - name: Sicherheit
       items:
-        - name: Administratorrechte
+        - name: Zuweisen von Rollen
           href: search-security-rbac.md
         - name: Datenverschlüsselung
           items:
@@ -540,8 +554,10 @@
               href: cognitive-search-skill-custom-entity-lookup.md
             - name: Dokumentextrahierung
               href: cognitive-search-skill-document-extraction.md
-            - name: Entitätserkennung
-              href: cognitive-search-skill-entity-recognition.md
+            - name: Entitätsverknüpfung (V3)
+              href: cognitive-search-skill-entity-linking-v3.md
+            - name: Entitätserkennung (V3)
+              href: cognitive-search-skill-entity-recognition-v3.md
             - name: Bildanalyse
               href: cognitive-search-skill-image-analysis.md
             - name: Schlüsselwortextraktion
@@ -552,8 +568,8 @@
               href: cognitive-search-skill-ocr.md
             - name: PII-Erkennung
               href: cognitive-search-skill-pii-detection.md
-            - name: Stimmung
-              href: cognitive-search-skill-sentiment.md
+            - name: Stimmung (V3)
+              href: cognitive-search-skill-sentiment-v3.md
             - name: Shaper
               href: cognitive-search-skill-shaper.md
             - name: Textzusammenführung
@@ -573,6 +589,10 @@
           items:
             - name: Erkennung benannter Entitäten
               href: cognitive-search-skill-named-entity-recognition.md
+            - name: Entitätserkennung
+              href: cognitive-search-skill-entity-recognition.md
+            - name: Stimmung
+              href: cognitive-search-skill-sentiment.md
     - name: Azure Policy-Integrationen
       displayName: 'samples, policies, definitions'
       href: ./policy-reference.md
