--- a/articles/virtual-machines/workloads/sap/toc.yml
+++ b/articles/virtual-machines/workloads/sap/toc.yml
@@ -78,6 +78,8 @@
           href: ha-setup-with-stonith.md
         - name: Betriebssystemsicherung
           href: large-instance-os-backup.md
+        - name: 'HLI-TYP der Betriebssystemsicherung: 2'
+          href: os-backup-hli-type-ii-skus.md
         - name: Hohe Verfügbarkeit von Azure (große Instanzen) für SAP auf RHEL
           href: large-instance-high-availability-rhel.md
         - name: Aktivieren von Kdump für große HANA-Instanzen
@@ -319,6 +321,16 @@
       href: /power-bi/desktop-sap-bw-connector
     - name: SAP HANA- und Business Warehouse-Datenintegration mit Azure Data Factory
       href: 'https://azure.microsoft.com/blog/azure-data-factory-offer-sap-hana-and-business-warehouse-data-integration'
+- name: Azure Sentinel und kontinuierliche Bedrohungsüberwachung für SAP
+  items:
+    - name: "Bereitstellen der Azure\_Sentinel-Lösung für SAP"
+      href: ../../../sentinel/sap-deploy-solution.md#deploy-sap-security-content
+    - name: Detaillierte Anforderungen
+      href: ../../../sentinel/sap-solution-detailed-requirements.md
+    - name: Referenz zu verfügbaren SAP-Protokollen
+      href: ../../../sentinel/sap-solution-log-reference.md
+    - name: Referenz zu SAP-Sicherheitsinhalten
+      href: ../../../sentinel/sap-solution-security-content.md
 - name: Azure Monitor für SAP-Lösungen
   items:
     - name: Übersicht über Azure Monitor für SAP-Lösungen
